bitfields/tests/compile_error_cases/bitfield_attribute_non_struct.stderr
error: expected `struct`
 --> tests/compile_error_cases/bitfield_attribute_non_struct.rs:8:5
  |
8 | pub enum NonStruct {
  |     ^^^^
